# UDV_news

./: README.md  main.py  news.json  pyproject.toml
app/: db.py  json_func.py  json_loader.py
app/crud/: __init__.py  comment.py  news.py
app/routes/: __init__.py  comments.py  news.py
